--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -2,11 +2,39 @@
   <div class="row">
 
     <div class="col-md-8">
-      <% if @car.image_url %>
-        <%= image_tag @car.image_url, class: "float-start car-img" %>
-      <% else %>
-      <%= image_tag("default_img.jpeg") %>
-      <% end %>
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <% if @car.image_url %>
+            <%= image_tag @car.image_url, class: "car-img" %>
+            <% else %>
+            <%= image_tag("default_img.jpeg") %>
+            <% end %>
+          </div>
+          <div class="carousel-item">
+            <% if @car.image_url %>
+            <%= image_tag @car.image_url, class: "car-img" %>
+            <% else %>
+            <%= image_tag("default_img.jpeg") %>
+            <% end %>
+          </div>
+          <div class="carousel-item">
+            <% if @car.image_url %>
+            <%= image_tag @car.image_url, class: "car-img" %>
+            <% else %>
+            <%= image_tag("default_img.jpeg") %>
+            <% end %>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </a>
+      </div>
     </div>
     <div class="col-md-4">
       <div class='d-flex flex-column justify-content-between h-100'>
@@ -14,58 +42,26 @@
           <h2 class="card-title"><%="#{@car.make} #{@car.model}" %> </h2>
           <h4 class="mb-5"><i class="fa-solid fa-location-dot"> </i> <%= @car.location.capitalize %> </h4>
           <div class="d-flex align-items-end justify-content-start w-100">
-            <div class="me-5">
+            <div class="me-5 pt-5">
               <p><i class="fa-solid fa-car"> </i> <%= @car.category.capitalize %> </p>
               <p><i class="fa-solid fa-chair"> </i> <%= @car.seats %> </p>
             </div>
-            <div>
+            <div class="me-5">
               <p> <i class="fa-solid fa-money-bill"></i>  £<%= @car.price %>/day</p>
               <p><i class="fa-solid fa-calendar-days"></i>    <%= @car.year %></p>
             </div>
           </div>
         </div>
-
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </div>
-
-      <div class="col-md-4">
-        <div class='d-flex flex-column justify-content-between h-100'>
-          <div>
-            <h2 class="card-title"><%="#{@car.make} #{@car.model}" %> </h2>
-            <h4 class="mb-5"><i class="fa-solid fa-location-dot"> </i> <%= @car.location.capitalize %> </h4>
-              <div class="d-flex align-items-end justify-content-start w-100 ">
-
-                <div class="me-5">
-                  <p><i class="fa-solid fa-car"> </i> <%= @car.category.capitalize %> </p>
-                  <p><i class="fa-solid fa-chair"> </i> <%= @car.seats %> </p>
-                </div>
-
-                <div>
-                  <p> <i class="fa-solid fa-money-bill"></i>  £<%= @car.price %>/day</p>
-                  <p><i class="fa-solid fa-calendar-days"></i>    <%= @car.year %></p>
-                </div>
-
-              </div>
-          </div>
-
-          <div class="border border-black p-3 rounded">
-            <%= simple_form_for [@car, @booking] do |f|%>
-              <%= f.input :start_date, html5: true %>
-              <%= f.input :end_date, html5: true  %>
-              <%= f.submit class: "btn btn-dark btn-md btn-block" %>
-            <% end %>
-          </div>
-
+        <div class="border border-black p-3 rounded">
+          <%= simple_form_for [@car, @booking] do |f|%>
+            <%= f.input :start_date, html5: true %>
+            <%= f.input :end_date, html5: true  %>
+            <%= f.submit class: "btn-sm btn-dark btn-lg btn-block" %>
+          <% end %>
         </div>
       </div>
-
+    </div>
+              </div>
+          </div>
   </div>
 </div>
