--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -12,7 +12,7 @@
           <%= f.input :photo, as: :file %>
           <%= f.input :price%>
           <%= f.input :location%>
-          <%= f.submit class: "btn btn-flat" %>
+          <%= f.submit class: "btn btn-dark" %>
         <% end %>
       </div>
     </div>
