--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -20,22 +20,24 @@
           </div>
         <% end %>
         <% @cars.each do |car| %>
-          <div class="col-lg-4 mb-4">
-            <div class="card shadow p-3">
+          <div class="col-lg-4 justify-content-center mb-4">
+            <div class="card shadow justify-content-center">
               <% if car.image_url %>
                 <%= image_tag car.image_url, class: "card-img-top", style: "height: 9rem; object-fit: cover;" %>
               <% else %>
               <%= image_tag("default_img.jpeg") %>
               <% end %>
-              <div class="card-body">
-                <h3 class="card-title"> <%="#{car.make} #{car.model}" %> </h2>
-
+              <div class="card-body mx-auto p-3 justify-content-center">
+                <h4 class="card-title"> <%="#{car.make} #{car.model}" %> </h4 >
+                    <div class ="mx-auto p-2">
                 <ul class="list-unstyled">
-                  <li class="p-2"><%= car.year %> </li>
-                  <li class="p-2"><%= number_to_currency(car.price.round(1), unit: "£")%>/day </li>
-                  <%= link_to"View",car_path(car), class: "view-btn btn btn-dark px-5 mt-3" %>
+                  <li class="p-1"><i class="fa-solid fa-calendar-days"></i> <%= car.year %> </li>
+                  <li class="p-1"><i class="fa-solid fa-money-bill"></i>  <%= number_to_currency(car.price.round(1), unit: "£")%>/day </li>
+                  <div class= "mx-auto p-2">
+                  <%= link_to"View",car_path(car), class: "view-btn btn btn-dark px-5 mt-3 " %>
+                  </div>
                 </ul>
-
+                  </div>
               </div>
             </div>
           </div>
