--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -2,9 +2,24 @@ body {
   background-color: black;
 }
 
-.car-img, .car-image {
+.car-img {
   width: 100%;
   height: 500px;
+  object-fit: cover;
+  object-position: center;
+
+}
+.car-image {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  object-position: center;
+
+}
+
+.card-img-top {
+  width: 100%;
+  height: 200px;
   object-fit: cover;
   object-position: center;
 
