--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -22,9 +22,9 @@
         <% @cars.each do |car| %>
           <div class="col-lg-4 mb-4">
             <div class="card shadow p-3">
-              <% if car.photos? %>
-                <%= cl_image_tag(car.photos[0], height: 9, crop: :fill, class: "card-img-top") %>
-              <% else %>
+              <% if car.photos.attached? %>
+                <%= cl_image_tag(car.photos.first.key, :height => 300, :crop => :fit, :class => "card-img-top") %>
+                <% else %>
               <%= image_tag("default_img.jpeg") %>
               <% end %>
               <div class="card-body">
@@ -32,7 +32,9 @@
 
                 <ul class="list-unstyled">
                   <li class="p-2"><%= car.year %> </li>
-                  <li class="p-2"><%= number_to_currency(car.price.round(1), unit: "£")%>/day </li>
+                  <% if car.price %>
+                    <li class="p-2"><%= number_to_currency(car.price.round(1), unit: "£")%>/day </li>
+                  <% end %>
                   <%= link_to"View",car_path(car), class: "view-btn btn btn-dark px-5 mt-3" %>
                 </ul>
 
