--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -9,3 +9,10 @@ body {
   object-position: center;
 
 }
+.car-img  {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+
+}
