--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container card mb-3 shadow p-3">
-  <div class="row">
+  <div class="row mb-3">
 
     <div class="col-md-8">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -27,20 +27,13 @@
           <span class="visually-hidden">Next</span>
         </a>
       </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <button class="btn btn-dark">
-        <%= link_to "Edit car", edit_car_path, class: "text-white text-decoration-none" %>
-      </button>
     </div>
 
     <div class="col-md-4">
       <div class='d-flex flex-column justify-content-between h-100'>
         <div>
           <h2 class="card-title"><%="#{@car.make} #{@car.model}" %> </h2>
-          <h4 class="mb-5"><i class="fa-solid fa-location-dot"> </i> <%= @car.location.upcase %> </h4>
+          <h4 class="mb-2"><i class="fa-solid fa-location-dot"> </i> <%= @car.location.upcase %> </h4>
           <div class="d-flex align-items-end justify-content-start w-100">
             <div class="me-5 pt-5">
               <p><i class="fa-solid fa-car"> </i> <%= @car.category.capitalize %> </p>
@@ -63,6 +56,9 @@
       </div>
 
     </div>
+  </div>
+  <div>
+    <%= link_to "Edit car", edit_car_path, class: "btn btn-dark d-inline-block text-white text-decoration-none" %>
   </div>
   </div>
   </div>
